--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -26,17 +26,15 @@ bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
 mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
 num-traits = "0.2.15"
 solana-program = "~1.16.5"
-# spl-account-compression = { version="0.2.0", features = ["cpi"] }
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
+optionize_macro = { path = "../../../optionize_macro" }
 
 [dev-dependencies]
 async-trait = "0.1.71"
-# mpl-token-auth-rules = { version = "1.4.3", features = ["no-entrypoint"] }
 solana-program-test = "~1.16.5"
 solana-sdk = "~1.16.5"
 spl-concurrent-merkle-tree = "0.2.0"
 spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
 solana-banks-interface = "1.14.10"
-# solana-banks-interface = { version = "^1.14.18", features = ["no-entrypoint"] }
