--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -28,7 +28,7 @@ num-traits = "0.2.15"
 solana-program = "~1.16.5"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
-optionize_macro = { path = "../../../optionize_macro" }
+macros = { path = "../../../macros" }
 
 [dev-dependencies]
 async-trait = "0.1.71"
@@ -38,3 +38,4 @@ spl-concurrent-merkle-tree = "0.2.0"
 spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
 solana-banks-interface = "1.14.10"
+regex = "1.5.4"
