Implement blackhat testing protocol, assertion changes, rust sdk

--- a/.github/.env
+++ b/.github/.env
@@ -1,6 +1,6 @@
 CARGO_TERM_COLOR=always
 NODE_VERSION=16.x
-PROGRAMS=["lighthouse"]
+PROGRAMS=["lighthouse", "blackhat"]
 RUST_VERSION=1.68.0
 SOLANA_VERSION=1.16.8
 ANCHOR_VERSION=0.27.0
