--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "rust-analyzer.linkedProjects": [
     "./programs/lighthouse/Cargo.toml",
-    "./programs/lighthouse/program/Cargo.toml"
+    "./programs/lighthouse/program/Cargo.toml",
+    "./programs/blackhat/Cargo.toml",
+    "./programs/blackhat/program/Cargo.toml",
+    "./rust-sdk/Cargo.toml"
   ]
 }
