--- a/programs/blackhat/program/Cargo.toml
+++ b/programs/blackhat/program/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "lighthouse"
+name = "blackhat"
 version = "0.0.1"
-description = "Transaction guard rails"
-authors = ["Jac0xb"]
+description = "blackhat"
+authors = ["badmen"]
 repository = "https://github.com/jac0xb/lighthouse"
 license-file = "../../../LICENSE"
 edition = "2021"
@@ -22,13 +22,7 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
-bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
-mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
-num-traits = "0.2.15"
 solana-program = "~1.16.5"
-spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
-spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
-macros = { path = "../../../macros" }
 
 [dev-dependencies]
 async-trait = "0.1.71"
@@ -39,4 +33,3 @@ spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
 solana-banks-interface = "1.14.10"
 regex = "1.5.4"
-blackhat = { path = "../../blackhat/program", features = ["no-entrypoint"] }
