Refactor assertions into single/multi and compact/no compact

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,6 @@
     "./programs/lighthouse/Cargo.toml",
     "./programs/lighthouse/program/Cargo.toml",
     "./programs/blackhat/Cargo.toml",
-    "./programs/blackhat/program/Cargo.toml",
-    "./rust-sdk/Cargo.toml"
+    "./programs/blackhat/program/Cargo.toml"
   ]
 }
