Refactor testing into its own crate, add in-line testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "./programs/lighthouse/Cargo.toml",
     "./programs/lighthouse/program/Cargo.toml",
     "./programs/blackhat/Cargo.toml",
-    "./programs/blackhat/program/Cargo.toml"
+    "./rust-sdk/Cargo.toml",
+    "./tests/lighthouse/Cargo.toml"
   ]
 }
