--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -18,22 +18,23 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 test-sbf = []
 default = []
+rc = []
 
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
-mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
+# mpl-token-metadata = { version = "2.0.0-beta.1", features = ["no-entrypoint"] }
 num-traits = "0.2.15"
-solana-program = "~1.16.5"
+solana-program = "~1.18.1"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 macros = { path = "../../../macros" }
 
 [dev-dependencies]
 async-trait = "0.1.71"
-solana-program-test = "~1.16.5"
-solana-sdk = "~1.16.5"
+solana-program-test = "~1.18.1"
+solana-sdk = "~1.18.1"
 spl-concurrent-merkle-tree = "0.2.0"
 spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
