--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -15,19 +15,25 @@ crate-type = ["cdylib", "lib"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-cpi = ["no-entrypoint"]
+# cpi = ["no-entrypoint"]
 test-sbf = []
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
-bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
-num-traits = "0.2.15"
-solana-program = "~1.18.1"
+# anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+thiserror = "=1.0.56"
+shank = "=0.0.12"
+anchor-spl = "=0.29.0"
+# bytemuck = {version = "=1.4.0", features = ["derive"]}
+# num-traits = "=0.2.15"
+solana-program = "=1.18.1"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 macros = { path = "../../../macros" }
+borsh = "=0.9.3"
+num_enum = "=0.5.9"
+bytemuck = "^1.14.0"
+lib-sokoban = "=0.3.0" 
 
 [dev-dependencies]
 async-trait = "0.1.71"
