--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -25,10 +25,8 @@ anchor-spl = "=0.29.0"
 solana-program = "=1.18.1"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
-# macros = { path = "../../../macros" }
 borsh = "^0.10.0"
 bincode = "1.3.1"
-# num_enum = "=0.5.9"
 bytemuck = "^1.14.0"
 lib-sokoban = "=0.3.0" 
 kaigan = "=0.2.4"
@@ -36,3 +34,4 @@ num-traits = "0.2.18"
 
 [dev-dependencies]
 solana-sdk = "~1.18.1"
+blackhat = { path="../../blackhat/program", features = ["no-entrypoint"] }
