--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "rust-analyzer.linkedProjects": [
     "./programs/lighthouse/Cargo.toml",
     "./programs/blackhat/Cargo.toml",
-    "./rust-sdk/Cargo.toml",
+    "./lighthouse-sdk/Cargo.toml",
     "./tests/lighthouse/Cargo.toml",
     "./test-client/Cargo.toml"
   ]
