--- a/test-client/Cargo.toml
+++ b/test-client/Cargo.toml
@@ -10,7 +10,7 @@ description = "A simple CLI application to test Lighthouse on Solana network"
 clap = { version = "^4.5.1", features = ["derive"] }
 solana-sdk = "~1.18.1"
 lighthouse = { path = "../programs/lighthouse/program", features = ["no-entrypoint"] }
-rust_sdk = { path = "../rust-sdk" }
+lighthouse-sdk = { path = "../lighthouse-sdk" }
 serde_json = "1.0.114"
 solana-program = "~1.18.1"
 solana-client = "~1.18.1"
