--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "./programs/lighthouse/Cargo.toml",
     "./programs/blackhat/Cargo.toml",
     "./lighthouse-sdk/Cargo.toml",
+    "./blackhat-sdk/Cargo.toml",
     "./tests/lighthouse/Cargo.toml",
     "./test-client/Cargo.toml"
   ]
