--- a/lighthouse-sdk/Cargo.toml
+++ b/lighthouse-sdk/Cargo.toml
@@ -17,5 +17,5 @@ spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-en
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 async-trait = "0.1.71"
 solana-sdk = "~1.18.1"
-lighthouse = { version = "0.1.0", path="../programs/lighthouse/program", features = ['no-entrypoint'] }
+lighthouse = { version = "0.1.0", path="../programs/lighthouse/program" }
 kaigan = "=0.2.4"
