--- a/blackhat-sdk/Cargo.toml
+++ b/blackhat-sdk/Cargo.toml
@@ -10,10 +10,10 @@ license-file = "../LICENSE"
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
-solana-program = "~1.18.1"
+solana-program = "1.17.23"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 async-trait = "0.1.71"
-solana-sdk = "~1.18.1"
+solana-sdk = "1.17.23"
 blackhat = { path="../programs/blackhat/program", features = ["no-entrypoint"] }
 lighthouse-sdk = { path="../lighthouse-sdk" }
