--- a/programs/blackhat/program/Cargo.toml
+++ b/programs/blackhat/program/Cargo.toml
@@ -23,13 +23,13 @@ rc = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
-solana-program = "~1.18.1"
+solana-program = "1.17.23"
 arrayref = "0.3.7"
 
 [dev-dependencies]
 async-trait = "0.1.71"
-solana-program-test = "~1.18.1"
-solana-sdk = "~1.18.1"
+solana-program-test = "1.17.23"
+solana-sdk = "1.17.23"
 spl-concurrent-merkle-tree = "0.2.0"
 spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
