--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -22,7 +22,7 @@ default = []
 thiserror = "=1.0.56"
 shank = "=0.0.12"
 anchor-spl = "=0.29.0"
-solana-program = "=1.18.1"
+solana-program = "=1.17.23"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 borsh = "^0.10.0"
@@ -34,4 +34,4 @@ num-traits = "0.2.18"
 
 [dev-dependencies]
 blackhat = { path="../../blackhat/program", features = ["no-entrypoint"] }
-solana-sdk = "~1.18.1"
+solana-sdk = "1.17.23"
