Remove old rust sdk in favor of kinobi built

--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -38,7 +38,7 @@ regex = "1.5.4"
 lighthouse = { path = "../../programs/lighthouse/program" }
 test-program = { path = "../../programs/test-program/program", features = ["no-entrypoint"] }
 blackhat = { path = "../../programs/blackhat/program", features = ["no-entrypoint"] }
-lighthouse-sdk = { path = "../../lighthouse-sdk" }
+# lighthouse-sdk = { path = "../../lighthouse-sdk" }
 lighthouse-client = { path = "../../clients/rust" }
 solana-vote-program = "1.17.23"
 rand = "0.8.4"
