Clean up, map errors, add program assertion

--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -43,3 +43,5 @@ solana-vote-program = "1.17.23"
 rand = "0.8.4"
 borsh = "^0.10.0"
 solana-client = "1.17.23"
+bincode = "1"
+solana-loader-v4-program = "1.17.23"
