--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ PROGRAMS="programs/lighthouse programs/blackhat programs/test-program"
 PROGRAMS_BINARIES="lighthouse.so blackhat.so test_program.so"
 PROGRAMS_ADDRESSES="L1TEVtgA75k273wWz1s6XMmDhQY5i3MwcvKb4VbZzfK" "Drainer1111111111111111111111111111111111111"
 PROGRAMS_OUTPUT="configs/.programs"
-PROGRAMS_EXTERNAL_ADDRESSES="metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV"
-PROGRAMS_EXTERNAL_BINARIES="mpl_token_metadata.so spl_noop.so"
+PROGRAMS_EXTERNAL_ADDRESSES="metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY"
+PROGRAMS_EXTERNAL_BINARIES="mpl_token_metadata.so spl_account_compression.so spl_noop.so mpl_bubblegum.so"
 RUST_VERSION=1.77.0
 SOLANA_VERSION=1.17.23
 ANCHOR_VERSION=0.29.0
