--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -14,11 +14,12 @@ crate-type = ["cdylib", "lib"]
 [features]
 no-entrypoint = []
 no-idl = []
-no-log-ix-name = []
 test-sbf = []
 default = []
 
 [dependencies]
+# Used in spl_compression CPI
+anchor-lang = { version = "=0.29.0" }
 thiserror = "=1.0.56"
 shank = "=0.3.0"
 solana-program = "=1.17.23"
@@ -30,9 +31,10 @@ bincode = "1.3.1"
 bytemuck = "^1.14.0"
 lib-sokoban = "=0.3.0" 
 kaigan = "=0.2.4"
-num-traits = "0.2.18"
-mpl-bubblegum = "1.2.0"
+num-traits = "=0.2.18"
+mpl-bubblegum = "=1.2.0"
+spl-account-compression = { version = "=0.3.0", features = ["cpi" , "no-entrypoint"] }
 
 [dev-dependencies]
 test-program = { path = "../../test-program/program", features = ["no-entrypoint"] }
-solana-sdk = "1.17.23"
+solana-sdk = "=1.17.23"
