--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -35,7 +35,6 @@ solana-program-test = "1.17.23"
 solana-sdk = "1.17.23"
 solana-banks-interface = "1.14.10"
 regex = "1.5.4"
-# lighthouse = { path = "../../programs/lighthouse/program" }
 test-program = { path = "../../programs/test-program/program", features = ["no-entrypoint"] }
 blackhat = { path = "../../programs/blackhat/program", features = ["no-entrypoint"] }
 lighthouse-client = { path = "../../clients/rust" }
@@ -45,3 +44,11 @@ borsh = "^0.10.0"
 solana-client = "1.17.23"
 bincode = "1"
 solana-loader-v4-program = "1.17.23"
+mpl-bubblegum = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "bubblegum" }
+mpl-bubblegum-client = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
+spl-concurrent-merkle-tree = "0.2.0"
+spl-merkle-tree-reference = "0.1.0"
+spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
+mpl-token-metadata = "3.2.3"
+spl-account-compression = { version = "0.3.0", features = ["cpi"] }
+bytemuck = "1.13.0"
