--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lighthouse_tests"
 version = "0.0.1"
-description = "Transaction guard rails"
+description = "Test suite for lighthouse program"
 authors = ["Jac0xb"]
 repository = "https://github.com/jac0xb/lighthouse"
 license-file = "../../../LICENSE"
@@ -12,19 +12,7 @@ readme = "../../README.md"
 crate-type = ["cdylib", "lib"]
 path = "src/lib.rs"
 
-[features]
-no-entrypoint = []
-no-idl = []
-no-log-ix-name = []
-cpi = ["no-entrypoint"]
-test-sbf = []
-default = []
-rc = []
-
 [dependencies]
-
-
-[dev-dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 solana-program = "1.17.23"
@@ -45,7 +33,7 @@ solana-client = "1.17.23"
 bincode = "1"
 solana-loader-v4-program = "1.17.23"
 mpl-bubblegum = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "bubblegum" }
-mpl-bubblegum-client = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
+# mpl-bubblegum-client = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
 spl-concurrent-merkle-tree = "0.2.0"
 spl-merkle-tree-reference = "0.1.0"
 spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
