--- a/tests/test-client/Cargo.toml
+++ b/tests/test-client/Cargo.toml
@@ -15,3 +15,7 @@ solana-program = "1.17.23"
 solana-client = "1.17.23"
 rayon = "1.8.1"
 borsh = "^0.10.0"
+spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
+spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
+anchor-spl = "0.29.0"
+bincode = "1"
