--- a/clients/js/package.json
+++ b/clients/js/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@acme/counter",
-  "version": "0.1.0",
-  "description": "Counters on-chain",
+  "name": "lighthouse-js",
+  "version": "0.0.0",
+  "description": "JavaScript client for the Counter program",
   "sideEffects": false,
   "module": "dist/src/index.mjs",
   "main": "dist/src/index.js",
@@ -30,27 +30,19 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "repository": "https://github.com/lorisleiva/kinobi-template.git",
-  "author": "Loris Leiva",
   "license": "MIT",
   "dependencies": {
-    "@solana/accounts": "2.0.0-experimental.a7a613a",
-    "@solana/addresses": "2.0.0-experimental.a7a613a",
-    "@solana/codecs-core": "2.0.0-experimental.a7a613a",
-    "@solana/codecs-data-structures": "2.0.0-experimental.a7a613a",
-    "@solana/codecs-numbers": "2.0.0-experimental.a7a613a",
-    "@solana/codecs-strings": "2.0.0-experimental.a7a613a",
-    "@solana/instructions": "2.0.0-experimental.a7a613a",
-    "@solana/keys": "2.0.0-experimental.a7a613a",
-    "@solana/options": "2.0.0-experimental.a7a613a",
-    "@solana/programs": "2.0.0-experimental.a7a613a",
-    "@solana/signers": "2.0.0-experimental.a7a613a",
-    "@solana/transactions": "2.0.0-experimental.a7a613a"
+    "@solana/accounts": "^2.0.0-preview",
+    "@solana/addresses": "2.0.0-preview.1.20240309110023.71d404f228034d8ffbeecaabbc1b43722af03487",
+    "@solana/codecs": "^2.0.0-preview",
+    "@solana/instructions": "^2.0.0-preview",
+    "@solana/programs": "^2.0.0-preview",
+    "@solana/signers": "^2.0.0-preview"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "@solana/web3.js": "2.0.0-experimental.a7a613a",
-    "@solana/webcrypto-ed25519-polyfill": "2.0.0-experimental.a7a613a",
+    "@solana/web3.js": "^2.0.0-preview",
+    "@solana/webcrypto-ed25519-polyfill": "^2.0.0-preview",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "ava": "^6.1.1",
