--- a/programs/test-program/program/Cargo.toml
+++ b/programs/test-program/program/Cargo.toml
@@ -25,6 +25,7 @@ anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 solana-program = "1.17.23"
 arrayref = "0.3.7"
+lighthouse-client = { version = "0.1.0", path = "../../../clients/rust", features = ["cpi"] }
 
 [dev-dependencies]
 async-trait = "0.1.71"
