--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -18,22 +18,21 @@ test-sbf = []
 default = []
 
 [dependencies]
-# Used in spl_compression CPI
-anchor-lang = { version = "=0.29.0" }
 thiserror = "=1.0.56"
 shank = "=0.3.0"
 solana-program = "=1.17.23"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
-spl-token-2022 = { version = "2.0.1", features = [ "no-entrypoint" ] }
-borsh = "^0.10.0"
+spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
+borsh = "=0.10.0"
 bincode = "1.3.1"
-bytemuck = "^1.14.0"
+bytemuck = "=1.14.0"
 lib-sokoban = "=0.3.0" 
 kaigan = "=0.2.4"
 num-traits = "=0.2.18"
 mpl-bubblegum = "=1.2.0"
 spl-account-compression = { version = "=0.3.0", features = ["cpi" , "no-entrypoint"] }
+sha2-const-stable = "=0.1.0"
 
 [dev-dependencies]
 test-program = { path = "../../test-program/program", features = ["no-entrypoint"] }
