--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -18,10 +18,10 @@ num-derive = "^0.3"
 num-traits = "^0.2"
 serde = { version = "^1.0", features = ["derive"], optional = true }
 serde_with = { version = "^3.0", optional = true }
-solana-program = "=1.17.23"
+solana-program = "1.17.23"
 thiserror = "^1.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-solana-program-test = "=1.17.23"
-solana-sdk = "=1.17.23"
+solana-program-test = "1.17.23"
+solana-sdk = "1.17.23"
