--- a/programs/lighthouse/program/Cargo.toml
+++ b/programs/lighthouse/program/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lighthouse"
+name = "lighthouse-v1"
 version = "0.1.0"
 description = "Transaction guard rails"
 authors = ["Jac0xb"]
@@ -9,29 +9,33 @@ edition = "2021"
 readme = "../../README.md"
 
 [lib]
+name = "lighthouse"
 crate-type = ["cdylib", "lib"]
 
 [features]
 no-entrypoint = []
-no-idl = []
-test-sbf = []
-default = []
+
+[profile.release]
+lto = "fat"
+overflow-checks = true
 
 [dependencies]
-thiserror = "=1.0.56"
+base64 = "=0.21.4"
+bincode = "=1.3.3"
+borsh = "=0.10.3"
+bytemuck = "=1.14.3"
+lib-sokoban = "=0.3.0"
+num-traits = "=0.2.18"
+sha2-const-stable = "=0.1.0"
 shank = "=0.3.0"
 solana-program = "=1.17.23"
+solana-security-txt = "=1.1.1"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
-borsh = "=0.10.3"
-bincode = "=1.3.3"
-bytemuck = "=1.14.3"
-lib-sokoban = "=0.3.0" 
-num-traits = "=0.2.18"
-sha2-const-stable = "=0.1.0"
+thiserror = "=1.0.56"
+spl-noop = { version = "0.2.0", features = ["no-entrypoint", "cpi"] }
 
 [dev-dependencies]
-test-program = { path = "../../test-program/program", features = ["no-entrypoint"] }
-solana-sdk = "=1.17.23"
 solana-program-test = "=1.17.23"
+solana-sdk = "=1.17.23"
