--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -25,7 +25,7 @@ solana-banks-interface = "1.14.10"
 regex = "1.5.4"
 test-program = { path = "../../programs/test-program/program", features = ["no-entrypoint"] }
 blackhat = { path = "../../programs/blackhat/program", features = ["no-entrypoint"] }
-lighthouse-client = { path = "../../clients/rust" }
+lighthouse-client = { path = "../../clients/rust", features = ["sdk"], default-features = false }
 solana-vote-program = "1.17.23"
 rand = "0.8.4"
 borsh = "^0.10.0"
