Update rust client Cargo.toml

--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license-file = "../../LICENSE"
+description = "A rust client for Lighthouse, a transaction safeguard Solana program"
+repository = "https://github.com/Jac0xb/lighthouse"
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "lib"]
