Rename rust client to lighthouse-sdk

--- a/tests/test-client/Cargo.toml
+++ b/tests/test-client/Cargo.toml
@@ -9,7 +9,7 @@ description = "A simple CLI application to test Lighthouse on Solana network"
 [dependencies]
 clap = { version = "^4.5.1", features = ["derive"] }
 solana-sdk = "1.17.23"
-lighthouse-client = { path = "../../clients/rust" }
+lighthouse-sdk = { path = "../../clients/rust" }
 serde_json = "1.0.114"
 solana-program = "1.17.23"
 solana-client = "1.17.23"
