--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -27,6 +27,7 @@ serde_with = { version = "^3.0", optional = true }
 solana-program = "1.17.23"
 solana-sdk = { version = "1.17.23", optional = true }
 thiserror = "^1.0"
+base64 = "0.22.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
