Upgrade to 1.18.8, fix various issues in order to support verifable program builds

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CARGO_TERM_COLOR=always
 NODE_VERSION=16.x
-PROGRAMS="programs/lighthouse programs/blackhat programs/test-program"
+PROGRAMS="programs/lighthouse programs/blackhat/program programs/test-program/program"
 PROGRAMS_BINARIES="lighthouse.so blackhat.so test_program.so"
 PROGRAMS_ADDRESSES="L1TEVtgA75k273wWz1s6XMmDhQY5i3MwcvKb4VbZzfK" "Drainer1111111111111111111111111111111111111"
 PROGRAMS_OUTPUT="configs/.programs"
