--- a/programs/lighthouse/Cargo.toml
+++ b/programs/lighthouse/Cargo.toml
@@ -1,8 +1,39 @@
+[package]
+name = "lighthouse-v1"
+version = "0.1.0"
+description = "Transaction guard rails"
+authors = ["Jac0xb"]
+repository = "https://github.com/jac0xb/lighthouse"
+license-file = "../../../LICENSE"
+edition = "2021"
+readme = "../../README.md"
+
+[lib]
+name = "lighthouse"
+crate-type = ["cdylib", "lib"]
+
+[features]
+no-entrypoint = []
+
 [profile.release]
+lto = "fat"
 overflow-checks = true
 
-[workspace]
-resolver = "2"
-members = [
-    "program"
-]
+[dependencies]
+bincode = "=1.3.3"
+borsh = "=0.10.3"
+bytemuck = "=1.14.3"
+lib-sokoban = "=0.3.0"
+num-traits = "=0.2.18"
+sha2-const-stable = "=0.1.0"
+shank = "=0.3.0"
+solana-program = "=1.18.8"
+solana-security-txt = "=1.1.1"
+spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
+spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
+spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
+thiserror = "=1.0.56"
+
+[dev-dependencies]
+solana-program-test = "=1.18.8"
+solana-sdk = "=1.18.8"
