--- a/programs/lighthouse/Cargo.toml
+++ b/programs/lighthouse/Cargo.toml
@@ -33,6 +33,7 @@ spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-en
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
 thiserror = "=1.0.56"
+lighthouse-common = { path = "../../lighthouse-common" }
 
 [dev-dependencies]
 solana-program-test = "=1.18.8"
