Build test programs in test script

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 CARGO_TERM_COLOR=always
 NODE_VERSION=16.x
 PROGRAMS="programs/lighthouse"
+TEST_PROGRAMS="programs/lighthouse programs/blackhat/program programs/test-program/program"
 PROGRAMS_BINARIES="lighthouse.so"
 PROGRAMS_ADDRESSES="L1TEVtgA75k273wWz1s6XMmDhQY5i3MwcvKb4VbZzfK"
 PROGRAMS_OUTPUT="configs/.programs"
