Create handle bar generator for registry

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,13 @@
       },
       "preLaunchTask": "find-test-binary",
       "sourceLanguages": ["rust"]
+    },
+    {
+      "type": "node-terminal",
+      "name": "Debug Current TS File (ts-node)",
+      "request": "launch",
+      "command": "ts-node -- ${fileBasenameNoExtension}",
+      "cwd": "${fileDirname}"
     }
   ],
   "inputs": [
