--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "programs:clean": "bash configs/scripts/env-run.sh ./configs/scripts/program/clean.sh",
     "clients:rust:test": "bash configs/scripts/env-run.sh ./configs/scripts/client/test-rust.sh",
     "clients:js:test": "bash configs/scripts/env-run.sh ./configs/scripts/client/test-js.sh",
-    "generate": "pnpm run generate:shank && pnpm run generate:kinobi",
+    "generate": "pnpm run generate:shank && pnpm run generate:kinobi && pnpm run generate:registry",
     "generate:shank": "bash configs/scripts/env-run.sh node ./configs/shank.cjs",
     "generate:kinobi": "bash configs/scripts/env-run.sh node ./configs/kinobi.cjs",
+    "generate:registry": "bash configs/scripts/env-run.sh ./configs/scripts/generate-registry.sh",
     "validator": "bash configs/scripts/env-run.sh amman start --config ./configs/validator.cjs",
     "validator:debug": "bash configs/scripts/env-run.sh amman start --config ./configs/validator.cjs",
     "validator:logs": "bash configs/scripts/env-run.sh amman logs",
