--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Lighthouse Tests",
+      "name": "Run - Lighthouse Tests",
       "type": "lldb",
       "request": "launch",
       "program": "${workspaceFolder}/tests/lighthouse/target/debug/deps/${input:latestTestBinary}",
@@ -18,7 +18,7 @@
     },
     {
       "type": "node-terminal",
-      "name": "Debug Current TS File (ts-node)",
+      "name": "Run - Current Typescript File",
       "request": "launch",
       "command": "ts-node -- ${fileBasenameNoExtension}",
       "cwd": "${fileDirname}"
@@ -37,77 +37,3 @@
     }
   ]
 }
-
-// {
-//   "version": "0.2.0",
-//   "configurations": [
-//     {
-//       "name": "Run Lighthouse Tests",
-//       "type": "lldb",
-//       "request": "launch",
-//       "relativePathBase": "${workspaceFolder}/tests/lighthouse",
-//       // "cargo": {
-//       //   "args": [
-//       //     "test",
-//       //     "--no-run",
-//       //     "--lib",
-//       //     // "--package=lighthouse_tests",
-//       //     "--manifest-path",
-//       //     "${workspaceFolder}/tests/lighthouse/Cargo.toml"
-//       //     // "--message-format=human"
-//       //   ],
-//       //   "problemMatcher": "$rustc",
-//       //   "filter": {
-//       //     "name": "tests-lib",
-//       //     "kind": "exe"
-//       //   }
-//       // },
-//       "program": "${workspaceFolder}/tests/lighthouse/target/debug/deps/tests_lib-26ba9f221a9f4534",
-//       "args": [],
-//       "cwd": "${workspaceFolder}/tests/lighthouse",
-//       "env": {
-//         "RUST_LOG": "error",
-//         "RUST_BACKTRACE": "1",
-//         "SBF_OUT_DIR": "${workspaceFolder}/configs/.programs"
-//       },
-//       // "stdio": [null, null, "debugConsole"],
-//       "sourceLanguages": ["rust"]
-//     }
-//   ]
-// }
-
-// {
-//   "version": "0.2.0",
-//   "configurations": [
-//     {
-//       "name": "Run Lighthouse Tests",
-//       "type": "lldb",
-//       "request": "launch",
-//       // "program": "${workspaceFolder}/tests/lighthouse/target/debug",
-//       "cargo": {
-//         "args": [
-//           "test",
-//           "--no-run",
-// "--manifest-path",
-// "${workspaceFolder}/tests/lighthouse/Cargo.toml",
-//           "--bin=lighthouse_tests",
-//           "--package=lighthouse_tests"
-//         ]
-//         // "filter": {
-//         //   "name": "lighthouse_tests",
-//         //   "kind": "lib"
-//         // }
-//       },
-//       "args": [],
-//       "cwd": "${workspaceFolder}/tests/lighthouse",
-//       "env": {
-//         "RUST_LOG": "error",
-//         "RUST_BACKTRACE": "1",
-//         "SBF_OUT_DIR": "${workspaceFolder}/configs/.programs"
-//       },
-//       // "preLaunchTask": "cargo test",
-//       "stdio": [null, null, "debugConsole"],
-//       "sourceLanguages": ["rust"]
-//     }
-//   ]
-// }
