--- a/lighthouse-common/Cargo.toml
+++ b/lighthouse-common/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "lighthouse-common"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 readme = "README.md"
-license-file = "../../LICENSE"
+license-file = "../LICENSE"
 description = "Shared common library used in lighthouse protocol and sdk"
 repository = "https://github.com/Jac0xb/lighthouse"
 license = "MIT"
