--- a/programs/lighthouse/Cargo.toml
+++ b/programs/lighthouse/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "lighthouse-v1"
-version = "0.1.0"
+name = "lighthouse-program"
+version = "2.0.0"
 description = "Transaction guard rails"
 authors = ["Jac0xb"]
 repository = "https://github.com/jac0xb/lighthouse"
@@ -33,7 +33,7 @@ spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-en
 spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
 spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
 thiserror = "=1.0.56"
-lighthouse-common = { path = "../../lighthouse-common" }
+lighthouse-common = { version = "2.0.0", features = ["serde"]}
 
 [dev-dependencies]
 solana-program-test = "=1.18.8"
