--- a/tests/lighthouse/Cargo.toml
+++ b/tests/lighthouse/Cargo.toml
@@ -20,7 +20,7 @@ base64 = "0.22.0"
 bincode = "1"
 borsh = "^0.10.0"
 bytemuck = "1.13.0"
-lighthouse-sdk = { path = "../../clients/rust", features = ["sdk"], default-features = false }
+lighthouse-sdk = { path = "../../clients/rust", version = "2.0.0", features = ["sdk"], default-features = false }
 mpl-bubblegum = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "bubblegum", features = ["test-sbf"] }
 mpl-bubblegum-sdk = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
 mpl-token-metadata = "3.2.3"
