--- a/tests/test-client/Cargo.toml
+++ b/tests/test-client/Cargo.toml
@@ -13,6 +13,7 @@ lighthouse-sdk = { path = "../../clients/rust", version = "2.0.0" }
 serde_json = "1.0.114"
 solana-program = "1.17.23"
 solana-client = "1.17.23"
+solana-rpc-client-api = "1.17.23"
 rayon = "1.8.1"
 borsh = "^0.10.0"
 spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
